[gd_scene load_steps=2 format=3 uid="uid://c5d8ldpeq6ccv"]

[ext_resource type="Script" path="res://src/menu/calendar/calendar_ui.gd" id="1_cf30q"]

[node name="CalendarUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cf30q")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 320)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Display" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -151.5
offset_right = 164.0
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MonthYear" type="HBoxContainer" parent="Panel/Display"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonPrevMonth" type="Button" parent="Panel/Display/MonthYear"]
layout_mode = 2
text = "<"

[node name="ButtonPrevYear" type="Button" parent="Panel/Display/MonthYear"]
layout_mode = 2
text = "<<"

[node name="LabelMonthYear" type="Label" parent="Panel/Display/MonthYear"]
layout_mode = 2
text = "JAN 1900"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNextYear" type="Button" parent="Panel/Display/MonthYear"]
layout_mode = 2
text = ">>"

[node name="ButtonNextMonth" type="Button" parent="Panel/Display/MonthYear"]
layout_mode = 2
text = ">"

[node name="LabelDays" type="HBoxContainer" parent="Panel/Display"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LabelSunday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "SUN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelMonday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "MON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTuesday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "TUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelWednesday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "WED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelThursday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "THU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelFriday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "FRI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSaturday" type="Label" parent="Panel/Display/LabelDays"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "SAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridDays" type="GridContainer" parent="Panel/Display"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 10
columns = 7

[node name="Button0" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button1" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button2" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button3" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button4" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button5" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button6" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button7" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button8" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button9" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button10" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button11" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button12" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button13" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button14" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button15" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button16" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button17" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button18" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button19" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button20" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button21" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button22" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button23" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button24" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button25" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button26" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button27" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button28" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button29" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button30" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button31" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button32" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button33" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button34" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button35" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button36" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button37" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button38" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button39" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button40" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[node name="Button41" type="Button" parent="Panel/Display/GridDays"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "99"

[connection signal="pressed" from="Panel/Display/MonthYear/ButtonPrevMonth" to="." method="_on_button_prev_month_pressed"]
[connection signal="pressed" from="Panel/Display/MonthYear/ButtonPrevYear" to="." method="_on_button_prev_year_pressed"]
[connection signal="pressed" from="Panel/Display/MonthYear/ButtonNextYear" to="." method="_on_button_next_year_pressed"]
[connection signal="pressed" from="Panel/Display/MonthYear/ButtonNextMonth" to="." method="_on_button_next_month_pressed"]
